# uf2-decode

./: .gitmodules  Cargo.toml  README.md  test.uf2
.github/workflows/: ci_checks.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: convert_from_uf2.rs
src/: lib.rs
tests/: valid_uf2.rs
