[package]
authors = ["Tommy Gilligan"]
name = "uf2"
version = "0.1.0"
edition = "2021"
description = "Converts binary files from Microsoft's UF2 format"
license = "MIT"
repository = "https://github.com/tommy-gilligan/uf2.git"
homepage = "https://github.com/tommy-gilligan/uf2"

[dev-dependencies]
indoc = "2.0.3"
